--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,35 @@
-#nav {
- margin: 15px 0 0 0;
-}
 
-#nav ul li {
- display: inline;
- margin: 2% 70px 2% 0;
- position: relative;
- left: 30%;
-}
-#nav ul{
-	margin-bottom: 3%;
-}
-
-#nav a {
- text-decoration: none;
- color: black;
- font-size: 15px;
-}
-
-#nav h5{
-	text-align: center;
-	margin:2%;
-	font-size: 25px;
+#nav a{
+	padding: 3%;
 }
 
 .dance1{
 	background-image: url(../img/dance_1.jpg);
-	width: 100%;
 	height: 480px;
 }
 
 .dance1 h5  {
 	margin-top:23%;
-	color: white;
 	font-size: 80px;
 }
 
 .dance1 p  {
 	padding: 2%;
-	color: white;
 	margin-bottom: 10%;
 }
 
 .dance1 a{
-	text-decoration: none;
 	padding: 2% 10%;
-	border:1px solid blue;
-	color: white;
+	border:1px solid #192951;
+	background-color: #192951;
 }
 
 .textura2{
 	background-image: url(../img/textura_2.jpg);
-	width: 100%;
 	height: 480px;
 }
 
 .textura2 p{
-	text-align: center;
 	font-size: 25px;
 	margin: 20% 0 0 0;
 }
@@ -72,14 +45,8 @@
 }
 .eight a{
 	margin-left: -23%;
-	text-decoration: none;
-	color: white;
 	padding: 2% 5%;
-	border: 1px solid blue;
-	background-color: blue;
+	border: 1px solid #192951;
+	background-color: #192951;
 }
 
-.man{
-	width: 100%;
-
-}
